# gonova-document-parser

./: .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_MINERU.md  OPTIMIZATIONS.md  PREREQUISITES.md  PRODUCTION.md  README.md  VLLM_DEPLOYMENT.md  docker-compose.vllm.yml  docker-compose.yml  findings-and-plan.md  pyproject.toml  requirements.txt  start.sh  start_api.sh
document_parser/: __init__.py  agent_tool.py  api.py  async_processor.py  base_processor.py  cli.py  config.py  deepseek_processor.py  document_analyzer.py  embedding_processor.py  granite_processor.py  hybrid_processor.py  job_manager.py  mineru_processor.py  nanonets_processor.py  page_classifier.py  queue.py  router.py  worker.py
scripts/: batch_process.py  quickstart.sh  start_vllm_servers.sh  stop_vllm_servers.sh  test_api.sh
